# Yggdrasil-ng

./: Cargo.toml  README.md  dockerfile
.github/workflows/: ci.yml  release-container.yml  release.yml
contrib/docker/: dockerfile  entrypoint.sh
contrib/macos/: yggdrasil.plist
crates/ironwood/: Cargo.toml
crates/ironwood/src/: config.rs  core.rs  pathfinder.rs  peers.rs  router.rs  traffic.rs
crates/ironwood/src/encrypted/: crypto.rs  mod.rs  session.rs
crates/ironwood/tests/: integration.rs
crates/salsa20-simd/: Cargo.toml  README.md
crates/salsa20-simd/src/: avx2.rs  lib.rs  neon.rs  sse2.rs
crates/yggdrasil/: Cargo.toml
crates/yggdrasil-mobile/kotlin-bindings/uniffi/yggdrasil_mobile/: yggdrasil_mobile.kt
crates/yggdrasil-mobile/src/: mobile.rs  yggdrasil_mobile.udl
crates/yggdrasil/src/: address.rs  admin.rs  ckr.rs  config.rs  config_template.toml  core.rs  ipv6rwc.rs  lib.rs  links.rs  main.rs  multicast.rs  tun.rs
crates/yggdrasil/src/transport/: mod.rs  quic.rs  tls.rs  ws.rs
docs/: CKR.md  CONTAINER.md
